# cloud-storage-mocker

./: README.md  check.sh  pyproject.toml
.github/workflows/: ci.yml
src/cloud_storage_mocker/: __init__.py  _core.py  _core_test.py  _example_test.py
